# wfc

./: Cargo.toml  bibliography.bib  wave_function_collapse_optimizations.tex
baseline_example/: main.rs
benches/: wfc_bench.rs
benchmark_results/report/: index.html
benchmark_results/wfc/10/report/: index.html
benchmark_results/wfc/11/report/: index.html
benchmark_results/wfc/12/report/: index.html
benchmark_results/wfc/13/report/: index.html
benchmark_results/wfc/14/report/: index.html
benchmark_results/wfc/15/report/: index.html
benchmark_results/wfc/16/report/: index.html
benchmark_results/wfc/17/report/: index.html
benchmark_results/wfc/18/report/: index.html
benchmark_results/wfc/19/report/: index.html
benchmark_results/wfc/20/report/: index.html
benchmark_results/wfc/21/report/: index.html
benchmark_results/wfc/22/report/: index.html
benchmark_results/wfc/23/report/: index.html
benchmark_results/wfc/24/report/: index.html
benchmark_results/wfc/25/report/: index.html
benchmark_results/wfc/report/: index.html
paper/: bibliography.bib  iithesis.cls  wave_function_collapse_optimizations.tex
queueprop_bitarrayset_example/: main.rs
queueprop_bitarrayset_fibheap_example/: main.rs
queueprop_example/: main.rs
src/: lib.rs  main.rs  vec3d.rs
src/wfc/: baseline.rs  bits256_set.rs  direction_mapping.rs  fib_heap.rs  mod.rs  queueprop.rs  queueprop_bitarrayset.rs  queueprop_bitarrayset_fibheap.rs  rules.rs  simple.rs  stackprop.rs  traits.rs  utils.rs
stackprop_example/: main.rs
tests/: wfc_test.rs
(+1128 files in other folders)
