[package]
name = "wfc"
version = "0.1.0"
edition = "2021"

[lib]
name = "wfc"
path = "src/lib.rs"
bench = false

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "wfc_bench"
harness = false

[[bin]]
name = "baseline"
path = "baseline_example/main.rs"
bench = false

[[bin]]
name = "queueprop"
path = "queueprop_example/main.rs"
bench = false

[[bin]]
name = "stackprop"
path = "stackprop_example/main.rs"
bench = false

[[bin]]
name = "queueprop_bitarrayset"
path = "queueprop_bitarrayset_example/main.rs"
bench = false

[[bin]]
name = "queueprop_bitarrayset_fibheap"
path = "queueprop_bitarrayset_fibheap_example/main.rs"
bench = false


